# backend-perritos-ac

./: Cargo.toml
src/: database.rs  main.rs  routes.rs
src/database/: conexion_db.rs
src/routes/: cliente_route.rs  mascota_route.rs
