[package]
name = "backend_perritos_ac"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
actix-web = "3"
actix-cors = "0.5.4"
mysql = "21.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
